--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,10 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
-.buttons {
+.header {
   margin: 10px;
 }
-
-.buttons button {
-  margin: 0 0 0 5px;
+.top-menu a {
+  margin: 0 5px 0 0;
+  text-decoration: none;
+}
+.content {
+  margin: 10px;
 }
